<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="50dp"
        android:paddingBottom="30dp"
        tools:context="com.pr.f2w.MainActivity">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b1bccff4"
            android:hint="@string/id"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#b1bccff4"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceLarge" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#174099"
            android:text="@string/login"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#75ede9e9"
            android:text="@string/new_user"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#045106" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#18800e"
            android:text="@string/register"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff"
            android:onClick="register"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#75ede9e9"
            android:text="Or Visit as "
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#045106" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d9570c"
            android:onClick="guest"
            android:text="@string/guest"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#ffffff" />

    </LinearLayout>

</ScrollView>
